crates/analyzer/tests/snapshots/errors__invalid_repeat_length.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: expected a constant u256 value
  ┌─ compile_errors/invalid_repeat_length.fe:3:45
  │
3 │         let my_array: Array<u256, 42> = [0; true]
  │                                             ^^^^ Array length
  │
  = Note: Array length must be a constant u256


